# CellularAAutomata

./: README.md  pyproject.toml
cellularautomata/: calculation_handler.py  main.py
tests/: unit_tests.py
