[tool.poetry]
name = "cellularautomata"
version = "0.1.0"
description = ""
authors = ["weibik <j-szkola@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
